--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Apex - Professional examination & training centre. Government-grade secure facilities and examination services." />
-    <link rel="icon" href="/src/assets/images/favicon.png" />
+    <link rel="icon" href="/src/assets/images/L2.png" />
     <title>Apex — Examination & Training Centre</title>
     <!-- Preload fonts recommendation -->
     <link rel="preload" href="/src/assets/fonts/Inter-Variable.woff2" as="font" type="font/woff2" crossorigin>
