feat: refresh homepage storytelling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Apex - Professional examination & training centre. Government-grade secure facilities and examination services." />
     <link rel="icon" href="/src/assets/images/L2.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Apex — Examination & Training Centre</title>
     <!-- Preload fonts recommendation -->
     <link rel="preload" href="/src/assets/fonts/Inter-Variable.woff2" as="font" type="font/woff2" crossorigin>
